--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 .container{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     background: url(images/apple1.jpg) no-repeat;
     background-position: center;
@@ -10,13 +10,34 @@
     width: auto;
 }
 
+h2{
+    font-size: 56px;
+}
+
+h3{
+    font-size: 28px;
+}
+
 @media all and (min-width: 320px) and (max-width: 480px){
 
-    .h2{
+    h2{
         font-size: 32px;
     }
-    .h3{
+    h3{
         font-size: 19px;
     }
 
 }
+
+@media all and (min-width: 481px) and (max-width: 768px){
+
+    h2{
+        font-size: 48px;
+    }
+    h3{
+        font-size: 24px;
+    }
+
+
+}
+
