--- a/style.css
+++ b/style.css
@@ -1,43 +1,69 @@
+body{
+    margin: 0;
+    background-color: #F5F5F7;
+}
+
+header{
+    background-color: white;
+    height: 40px;
+}
+
+nav{
+    display: flex;
+    justify-content: space-evenly;
+    height: 100%;
+    align-items: center;
+}
+
+a{
+    text-decoration: none;
+    color: gray;
+}
+
 .container{
     display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
     align-items: center;
-    background: url(images/apple1.jpg) no-repeat;
-    background-position: center;
-    background-size: cover;
-    height: 100vh;
-    width: auto;
 }
 
-h2{
-    font-size: 56px;
+.container2{
+    display: flex;
+    flex-direction: column;
+    margin-left: 30%;
+    margin-right: 30%;
+    margin-top: 3%;
+    text-align: center;
 }
 
-h3{
-    font-size: 28px;
+h1{
+    font-size: 96px;
+}
+
+p{
+    font-size: 24px;
 }
 
 @media all and (min-width: 320px) and (max-width: 480px){
 
-    h2{
-        font-size: 32px;
-    }
-    h3{
-        font-size: 19px;
-    }
-
-}
-
-@media all and (min-width: 481px) and (max-width: 768px){
-
-    h2{
+    h1{
         font-size: 48px;
     }
-    h3{
-        font-size: 24px;
+    p{
+        font-size: 17px;
     }
+}
+@media all and (min-width: 481px) and (max-width: 768px){
 
-
+    h1{
+        font-size: 48px;
+    }
+    p{
+        font-size: 21px;
+    }
 }
 
+@media all and (min-width: 769px) and (max-width: 1024px){
+
+    h1{
+        font-size: 64px;
+    }
+}
