Empezada la 2ª parte de Tv y casa

--- a/style.css
+++ b/style.css
@@ -70,3 +70,77 @@ img{
         font-size: 64px;
     }
 }
+
+.seccion1{
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    gap: 10px;
+}
+
+.container3{
+    display: flex;
+    flex-direction: row;
+    margin-left: 30%;
+    margin-right: 30%;
+    gap: 10px;
+}
+
+.container4{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    align-items: center;
+    width: 50%;
+    border-radius: 10px;
+    background-color: black;
+    color: white;
+}
+
+.container5{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 50%;
+    border-radius: 10px;
+    background-color: white;
+}
+
+.botonesseccion{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    align-items: center;
+}
+
+picture{
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+.comprar{
+    padding: 5px;
+    background-color: #0071e3;
+    border-radius: 8px;
+    border-color: transparent;
+    color: white;
+}
+.comprar:hover{
+    background-color: aqua;
+    transition: 0.3s;
+}
+.masinfo, .masinfo1{
+    padding: 5px;
+    background-color: #0071e3;
+    border-radius: 8px;
+    border-color: transparent;
+    background-color: transparent;
+}
+.masinfo1{
+    color: white;
+}
+
+.imgseccion{
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
