--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body{
     margin: 0;
     background-color: #F5F5F7;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 header{
@@ -42,6 +43,10 @@ p{
     font-size: 24px;
 }
 
+h3{
+    font-size: 36px;
+}
+
 img{
     width: 100%;
 }
@@ -53,6 +58,9 @@ img{
     p{
         font-size: 17px;
     }
+    h3{
+        font-size: 24px;
+    }
 }
 @media all and (min-width: 481px) and (max-width: 768px){
 
@@ -62,12 +70,18 @@ img{
     p{
         font-size: 21px;
     }
+    h3{
+        font-size: 24px;
+    }
 }
 
 @media all and (min-width: 769px) and (max-width: 1024px){
 
     h1{
         font-size: 64px;
+    }
+    h3{
+        font-size: 24px;
     }
 }
 
@@ -81,8 +95,8 @@ img{
 .container3{
     display: flex;
     flex-direction: row;
-    margin-left: 30%;
-    margin-right: 30%;
+    margin-left: 25%;
+    margin-right: 25%;
     gap: 10px;
 }
 
@@ -92,7 +106,7 @@ img{
     flex-direction: column;
     align-items: center;
     width: 50%;
-    border-radius: 10px;
+    border-radius: 20px;
     background-color: black;
     color: white;
 }
@@ -100,9 +114,10 @@ img{
 .container5{
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     align-items: center;
     width: 50%;
-    border-radius: 10px;
+    border-radius: 20px;
     background-color: white;
 }
 
@@ -113,11 +128,6 @@ img{
     align-items: center;
 }
 
-picture{
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-}
-
 .comprar{
     padding: 5px;
     background-color: #0071e3;
@@ -126,7 +136,7 @@ picture{
     color: white;
 }
 .comprar:hover{
-    background-color: aqua;
+    background-color: #00c1e3;
     transition: 0.3s;
 }
 .masinfo, .masinfo1{
@@ -141,6 +151,11 @@ picture{
 }
 
 .imgseccion{
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
+    height: 100%;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+}
+
+picture{
+    width: 100%;
 }
