--- a/style.css
+++ b/style.css
@@ -35,52 +35,82 @@ a{
     text-align: center;
 }
 
-h1{
+.titulo1{
     font-size: 96px;
 }
 
-p{
+.parrafo1{
     font-size: 24px;
 }
 
-h3{
+.titulo2{
     font-size: 36px;
 }
 
 img{
     width: 100%;
 }
+
+.titulo3{
+    font-size: 56px;
+}
+
+.titulo4{
+    font-size: 28px;
+}
+
 @media all and (min-width: 320px) and (max-width: 480px){
 
-    h1{
+    .titulo1{
         font-size: 48px;
     }
-    p{
+    .parrafo1{
         font-size: 17px;
     }
-    h3{
+    .titulo2{
         font-size: 24px;
+    }
+    .titulo3{
+        font-size: 32px;
+    }
+    
+    .titulo4{
+        font-size: 19px;
     }
 }
 @media all and (min-width: 481px) and (max-width: 768px){
 
-    h1{
+    .titulo1{
         font-size: 48px;
     }
-    p{
+    .parrafo1{
         font-size: 21px;
     }
-    h3{
+    .titulo2{
         font-size: 24px;
+    }
+    .titulo3{
+        font-size: 32px;
+    }
+    
+    .titulo4{
+        font-size: 19px;
     }
 }
 
 @media all and (min-width: 769px) and (max-width: 1024px){
 
-    h1{
+    .titulo1{
         font-size: 64px;
     }
-    h3{
+    .titulo2{
+        font-size: 24px;
+    }
+    .titulo3{
+        font-size: 48px;
+    }
+    
+    .titulo4{
         font-size: 24px;
     }
 }
@@ -159,3 +189,23 @@ img{
 picture{
     width: 100%;
 }
+
+.containerbg1{
+    height: 75vh;
+    background: url(images/apple1.jpg) no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+.containerbg2{
+    height: 75vh;
+    background: url(images/apple2.jpg) no-repeat;
+    background-position: center;
+    background-size: cover;
+
+    display: flex;
+    flex-direction: column;
+    color: white;
+    align-items: center;
+}
+
