--- a/style.css
+++ b/style.css
@@ -59,62 +59,6 @@ img{
     font-size: 28px;
 }
 
-@media all and (min-width: 320px) and (max-width: 480px){
-
-    .titulo1{
-        font-size: 48px;
-    }
-    .parrafo1{
-        font-size: 17px;
-    }
-    .titulo2{
-        font-size: 24px;
-    }
-    .titulo3{
-        font-size: 32px;
-    }
-    
-    .titulo4{
-        font-size: 19px;
-    }
-}
-@media all and (min-width: 481px) and (max-width: 768px){
-
-    .titulo1{
-        font-size: 48px;
-    }
-    .parrafo1{
-        font-size: 21px;
-    }
-    .titulo2{
-        font-size: 24px;
-    }
-    .titulo3{
-        font-size: 32px;
-    }
-    
-    .titulo4{
-        font-size: 19px;
-    }
-}
-
-@media all and (min-width: 769px) and (max-width: 1024px){
-
-    .titulo1{
-        font-size: 64px;
-    }
-    .titulo2{
-        font-size: 24px;
-    }
-    .titulo3{
-        font-size: 48px;
-    }
-    
-    .titulo4{
-        font-size: 24px;
-    }
-}
-
 .seccion1{
     display: flex;
     flex-direction: column;
@@ -209,3 +153,72 @@ picture{
     align-items: center;
 }
 
+@media all and (min-width: 320px) and (max-width: 480px){
+
+    .titulo1{
+        font-size: 48px;
+    }
+    .parrafo1{
+        font-size: 17px;
+    }
+    .titulo2{
+        font-size: 24px;
+    }
+    .titulo3{
+        font-size: 32px;
+    }
+    
+    .titulo4{
+        font-size: 19px;
+    }
+    .container3{
+        flex-direction: column;
+    }
+    .container4, .container5{
+        width: 100%;
+    }
+}
+@media all and (min-width: 481px) and (max-width: 768px){
+
+    .titulo1{
+        font-size: 48px;
+    }
+    .parrafo1{
+        font-size: 21px;
+    }
+    .titulo2{
+        font-size: 24px;
+    }
+    .titulo3{
+        font-size: 32px;
+    }
+    
+    .titulo4{
+        font-size: 19px;
+    }
+    .container3{
+        flex-direction: column;
+        margin-left: 0;
+        margin-right: 0;
+    }
+    .container4, .container5{
+        width: 100%;
+    }
+}
+
+@media all and (min-width: 769px) and (max-width: 1024px){
+
+    .titulo1{
+        font-size: 64px;
+    }
+    .titulo2{
+        font-size: 24px;
+    }
+    .titulo3{
+        font-size: 48px;
+    }
+    
+    .titulo4{
+        font-size: 24px;
+    }
+}
